# GameEngine

include/glad/: gl.h
src/: CMakeLists.txt  Engine.c  b.sh
